--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice Game</title>
     <link rel="stylesheet" href="myStyle.css">
     
 </head>
 <body>
+    <div class="container">
     <div style="text-align: center;">
         <h1>Refresh Me😉</h1> 
     </div>
@@ -21,7 +23,10 @@
         <p>Player2</p>
         <img src="images/dice6.png" alt="Image Not Found">
     </div>
-    <script src="MyJS.js"></script>
-    <footer style="font-size:x-large;position: relative;top:420px;text-align:center;">@The Khan Dev's</footer>
+</div>
+    <script src="MyJS.js" charset="utf-8"></script>
+
 </body>
+<footer style="font-size:x-large;position: absolute;top: 100%;left: 200px;text-align:center;">@The Khan Dev's</footer>
+
 </html>
