--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Dice Game</title>
     <link rel="stylesheet" href="myStyle.css">
     
+
+
+    
 </head>
 <body>
     <div class="container">
@@ -14,18 +17,19 @@
         <h1>Refresh Me😉</h1> 
     </div>
     <br>
-    <div id="d1">
+    <div class="dice">
         <p>Player1</p>
-        <img src="images/dice6.png" alt="Image Not Found">
+        <img class="img1" src="images/dice6.png" alt="Image Not Found">
     </div>
-    <div id="d2">
+    <div class="dice">
         <p>Player2</p>
-        <img src="images/dice6.png" alt="Image Not Found">
+        <img class="img2" src="images/dice6.png" alt="Image Not Found">
     </div>
 </div>
     <script src="MyJS.js" charset="utf-8"></script>
 
 </body>
-<footer style="font-size:x-large;position: absolute;top: 100%;left: 200px;text-align:center;">@The Khan Dev's</footer>
-
+<footer>
+    www 🎲 Khan Dev's 🎲 com
+  </footer>
 </html>
